--- a/package.json
+++ b/package.json
@@ -10,15 +10,36 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "4.0.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~44.0.0",
+    "expo-camera": "^12.1.2",
+    "expo-dev-client": "~0.8.5",
+    "expo-location": "^14.0.2",
+    "expo-notifications": "^0.14.1",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.3",
+    "native-base": "^3.4.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-alarm-clock": "^2.0.2",
+    "react-native-alarm-manager": "^1.2.1",
+    "react-native-date-picker": "^4.2.1",
+    "react-native-device-info": "^8.7.1",
+    "react-native-maps": "0.29.4",
+    "react-native-modal-datetime-picker": "^13.1.2",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-sound": "^0.11.2",
+    "react-native-web": "0.17.1",
+    "react-native-wheel-picker-android": "^2.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "typescript": "~4.3.5"
   },
   "private": true
 }
